compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_before_declaration_in_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  fn() {\n    s\n    let something = 10\n  }\n}\n"
snapshot_kind: text
---
pub fn main() {
  fn() {
    s|
    let something = 10
  }
}


----- Completion content -----
