compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_before_declaration_in_block.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  {\n    s\n    let something = 10\n  }\n}\n"
snapshot_kind: text
---
pub fn main() {
  {
    s|
    let something = 10
  }
}


----- Completion content -----
