compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__opaque_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub opaque type Wibble {\n  Wobble\n}\n"
snapshot_kind: text
---
|
pub opaque type Wibble {
  Wobble
}


----- Completion content -----
