compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__prefer_function_which_returns_expected_generic_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() -> Result(Int, Nil) {\n  let result = Ok(12)\n  let result2 = Error(True)\n  r\n}\n"
snapshot_kind: text
---
pub fn main() -> Result(Int, Nil) {
  let result = Ok(12)
  let result2 = Error(True)
  r|
}


----- Completion content -----
