compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__prefer_function_which_returns_expected_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() -> Int {\n  a\n}\n\nfn add(a, b) { a + b }\nfn sub(a, b) { a - b }\nfn addf(a, b) { a +. b }\n"
snapshot_kind: text
---
pub fn main() -> Int {
  a|
}

fn add(a, b) { a + b }
fn sub(a, b) { a - b }
fn addf(a, b) { a +. b }


----- Completion content -----
