compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__prefer_values_matching_expected_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() -> Bool {\n  let wibble = 123\n  let wubble = True\n  let Wobble = 1.5\n  w\n}\n"
snapshot_kind: text
---
pub fn main() -> Bool {
  let wibble = 123
  let wubble = True
  let Wobble = 1.5
  w|
}


----- Completion content -----
