compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__unqualified_imported_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import dep.{type Zoo}\n\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
import dep.{type Zoo}

pub fn wibble(
|  _: String,
) -> Nil {
  Nil
}


----- Completion content -----
